2002-09-25  Dan Dennedy <dan@dennedy.org>
	* avc1394_simple.c: added timeout support to avc transactions.
	* avc1394_vcr.c: added avc1394_vcr_seek_timecode(), but discovered
	  it is not supported by most devices.
	* dvcont.c: added seek command to test above, display usage if no
	  commands entered, added hidden pluginfo command for playing around,
	  added more verbose output.
	* configure.in: bump version.
	* dvcont.c: fixup version numbers.

2002-04-04  Dan Dennedy <dan@dennedy.org>
    * Applied patch from Kirk Bateman to handle unicode US_ENGLISH
      (Microsoft specific?) textual leaves in librom1394. Thanks!

2001-09-22  Dan Dennedy <dan@dennedy.org>
    * test/Makefile.am: tidy up
    * libavc1394/avc1394_internal.h: added defines for DEBUG and AVC1394_SLEEP
    * libavc1394/avc1394_simple.c: slight cleanup and conditional debug
    * test/dvcont.c: fixed bug that required Bevis King's timeout signal
      by using rom1394 to check for an AVC node before asking the node
      for AV/C subunit info -- doh!
    * test/dvcont.c: cleanup error messages and explicitly close raw1394
      handle

2001-08-15  Dan Dennedy <dan@dennedy.org>
    * avc1394_simple.c: bug fix in avc1394_check_subunit_type() to handle
      error return from call to avc1394_subunit_info(), set retry level =2
    * avc1394.h: added more VCR playback speeds,
      added enum for VCR measurement units
    * avc1394_vcr.[ch]: added functions for timecode, reverse, trickplay,
      index search; set retry level =2
    * dvcont.c: now version 0.1, added commands timecode, reverse, nextindex,
      previndex, trickplay, and status
    * dvcont.1: added man page written by Daniel Kobras
    * README: added usage information about dvcont.
    
2001-06-10  Dan Dennedy <dan@dennedy.org>
	* bug fix in librom1394/rom1394_internal.c:proc_directory, a failed
	  read on first quadlet could lead to an invalid directory length
	* bug fix in librom1394/rom1394_main.c:rom1394_get_directory, was not