@@ -1,3 +1,8 @@
+2002-09-26  Dan Dennedy <dan@dennedy.org>
+	* avc1394_simple.c: remove test for STABLE response from avc transactions.
+	* avc1394_simple.c: convert usleep to nanosleep.
+	* dvcont.1, dvcont.c: apply patch from Daniel Kobras for updated docs.
+
 2002-09-25  Dan Dennedy <dan@dennedy.org>
 	* avc1394_simple.c: added timeout support to avc transactions.
 	* avc1394_vcr.c: added avc1394_vcr_seek_timecode(), but discovered
